# Algorithmn

./: CMakeLists.txt  README.md  main.cpp
diamond_search/: CMakeLists.txt  main.cpp
liner_search/: CMakeLists.txt  HOMEWORK_REPORT.html  HOMEWORK_REPORT.md  main.cpp
matrix_multipliction/: CMakeLists.txt  HOMEWORK_REPORT.md  main.cpp  recursive.cpp  recursive_dp.cpp
max_length_subseq/: CMakeLists.txt  HOMEWORK_REPORT.md  dp.cpp  dp2.cpp  main.cpp  recursive.cpp
number_multiplication/: BigInt.h  CMakeLists.txt  HOMEWORK_REPORT.html  HOMEWORK_REPORT.md  main.cpp
number_split/: CMakeLists.txt  HOMEWORK_REPORT.html  HOMEWORK_REPORT.md  main.cpp  number_split2.cpp
optimal_BST/: CMakeLists.txt  HOMEWORK_REPORT.md  dp.cpp  main.cpp  recursive.cpp
print_combination/: CMakeLists.txt  HOMEWORK_REPORT.md  combination.cpp  fully_arrangement.cpp  fully_arrangement2.cpp
print_group/: CMakeLists.txt  main.cpp
queen_problem/: CMakeLists.txt  HOMEWORK_REPORT.md  backtrack.cpp  iterative_backtrack.cpp  main.cpp
twenty_four/: CMakeLists.txt  HOMEWORK_REPORT.md  backtrack.cpp  main.cpp
utils/: BST_utils.h  array_utils.h
